--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-util": "^3.0.7",
     "gulp-wrapper": "^1.0.0",
     "through-gulp": "^0.5.0",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "yargs": "^3.32.0"
   }
 }
